Clase 11 orden grabacion

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>Curso Básico de POO en JS</title>
 </head>
 <body>
-  <script src="./main.js"></script>
+  <!-- <script src="./main.js" type="module"></script> -->
+  <script type="module">
+    
+  </script>
 </body>
 </html>
