--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
   <title>Curso Básico de POO en JS</title>
 </head>
 <body>
-  <!-- <script src="./main.js" type="module"></script> -->
-  <script type="module">
-    
-  </script>
+  <script src="./main.js"></script>
 </body>
 </html>
